src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Problem_Statement__c</fullName>
        <description>What is the core problem which this project will address? Space is limited to 255 characters.</description>
        <inlineHelpText>What is the core problem which this project will address? Space is limited to 255 characters.</inlineHelpText>
        <label>Problem Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <description>What is the simplest description of the project? Space is limited to 255 characters.</description>
        <inlineHelpText>What is the simplest description of the project? Space is limited to 255 characters.</inlineHelpText>
        <label>Project Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Quote__c</fullName>
        <inlineHelpText>Express your enthusiasm, what you&apos;re working on, or your call to action from the Lilly community.</inlineHelpText>
        <label>Project Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Value__c</fullName>
        <description>What value does this project seek to deliver?</description>
        <inlineHelpText>What value does this project seek to deliver?</inlineHelpText>
        <label>Project Value</label>
        <type>TextArea</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>